# turret-vision

./: .gitignore  README.md  SPEC.md  STATUS.md  pyproject.toml
config/: default.yaml
firmware/: PROTOCOL.md  README.md
firmware/turret/: control.cpp  control.h  host_harness.cpp  protocol.cpp  protocol.h  turret.ino
tests/: test_ego_motion.py  test_filters.py  test_firmware_parity.py  test_geometry.py  test_gstreamer.py  test_intrinsics.py  test_lead.py  test_mock_link.py  test_pipeline_synthetic.py  test_protocol.py  test_ranging.py  test_replay_regression.py  test_serial_loopback.py  test_sim_target.py  test_tracker.py  test_tune.py  test_uvc_ctrl.py
tools/: calibrate_boresight.py  calibrate_camera.py  enumerate_camera.py  link_monitor.py  measure_capture.py  record.py  replay.py  sim_target.py
turretvision/: main.py
turretvision/calib/: geometry.py  intrinsics.py
turretvision/capture/: base.py  gstreamer.py  recorder.py  replay.py  synthetic.py  uvc_ctrl.py  v4l2.py
turretvision/detect/: aruco.py  base.py  color_mask.py  frame_diff.py
turretvision/lead/: predictor.py
turretvision/link/: base.py  console_link.py  mock_link.py  pose.py  protocol.py  serial_link.py
turretvision/ranging/: aruco_pose.py  base.py  fixed.py  known_size.py
turretvision/track/: filters.py  tracker.py
turretvision/tune/: page.html  params.py  server.py
turretvision/ui/: overlay.py
turretvision/util/: config.py  regression.py  timing.py
