[build-system]
# setuptools>=64 is required for PEP 660 editable installs; JetPack images ship
# 59.x, so Jetson users must `pip install --upgrade "setuptools>=64" wheel` first
# (see README "Setup (Jetson)").
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turret-vision"
version = "0.2.0"
description = "Real-time vision/tracking pipeline for an educational turret (Jetson Orin Nano -> ESP32)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",   # use the full (non-headless) build on the Jetson for imshow; headless is fine for CI/tests
    "pyyaml",
    "pyserial",        # used from Phase 3 onward
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["turretvision*"]

[tool.setuptools.package-data]
turretvision = ["tune/*.html"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
